--- a/audioTable.html
+++ b/audioTable.html
@@ -63,6 +63,10 @@
     </center>
 
 
-</body>
 
+    
+
+</body>
+<footer> <hr><br>
+    <center><button>Github</button><button>Instragram</button> </center></footer>
 </html>
