--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <a href = "audioTable.html" > audio page</a>
 <a href="">video </a> 
-<a href="">Notice</a>
+<a href="javascript/Registration.html">From</a>
 
 
 
