--- a/javascript/Registration.html
+++ b/javascript/Registration.html
@@ -39,7 +39,7 @@
       <input name="pw" type="password"> <br>
       Cpassword:<br>
       <input name="cpw" type="password"> <br>
-      Address:- <br>
+      Address: <br>
       <textarea wrap="virtual" name="add" value="add" rows="3" cols="22"></textarea> <br>
       year :
       <input list="year" name="yr"> 
