update to book store

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href = "audioTable.html" > audio page</a>
 <a href="">video </a> 
 <a href="javascript/Registration.html">From</a>
-<a href="online book store/login.html">LOGIN PAGE EXAMPE</a>    
+<a href="online book store/registration.html">LOGIN PAGE EXAMPE</a>    
 
 
 
